[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/loader_1.gd" type="Script" id=1]
[ext_resource path="res://assets/img/loader_1/progressBar.png" type="Texture" id=2]
[ext_resource path="res://assets/themes/world_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/sounds/loader_1/music.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/fonts/joystix monospace.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/img/loader_1/splash_gameOver.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/loader_1/game_over_rire.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/img/loader_1/background.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 540, 44 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 44, 540, 44 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 88, 540, 44 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 132, 540, 44 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 176, 540, 44 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 220, 540, 44 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 50
outline_size = 3
outline_color = Color( 0.580392, 0, 0.611765, 1 )
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fond" type="Sprite" parent="."]
texture = ExtResource( 8 )
centered = false

[node name="Barre" type="AnimatedSprite" parent="."]
position = Vector2( 389.703, 307.706 )
frames = SubResource( 7 )

[node name="Consigne" type="Label" parent="."]
margin_left = 154.49
margin_top = 136.21
margin_right = 629.49
margin_bottom = 250.21
theme = ExtResource( 3 )
text = "Chargement en cours

Appuyer sur Q"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_over" type="TextureRect" parent="Control"]
margin_left = 17.0
margin_top = 69.0
margin_right = 782.0
margin_bottom = 531.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_over_again" type="Label" parent="Control"]
margin_left = 133.0
margin_top = 238.0
margin_right = 666.0
margin_bottom = 361.0
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 8 )
text = "Recommencer ?
(o/n)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musique" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
autoplay = true

[node name="Rire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
[connection signal="animation_finished" from="Barre" to="." method="_on_Barre_animation_finished"]
